<resources>
    <string name="app_name" translatable="false">MSVC 2025</string>


    <string name="weather">Doha Weather</string>
    <string name="welcome_message">WELCOME MESSAGE</string>
    <string name="profile_des">Dear Delegate</string>
    <string name="currency_convertor">CURRENCY CONVERTER</string>
    <string name="awords">Awards</string>
    <string name="conference">Conference</string>
    <string name="business_formal">Business\n Formal</string>
    <string name="conference_agenda">CONFERENCE AGENDA</string>
    <string name="reword">AWARDS</string>
    <string name="your_seat_number">Your Seat number: %1$s</string>
    <string name="notes">Event Builder</string>
    <string name="hotel_detail">Hotel Details</string>
    <string name="hotel_contact">Hotel Contacts</string>
    <string name="my_gallery">MY GALLERY</string>
    <string name="conference_photo">Conference Photo</string>
    <string name="dinner">Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="breakfast_detail">FOOD PLAN</string>
    <string name="lunch_detail">Lunch Details</string>
    <string name="lunch">Lunch</string>
    <string name="feedback">Feedback</string>
    <string name="bg">BackgroundImage</string>
    <string name="spouse_tour">Spouse Tour</string>
    <string name="speaker">Speakers</string>
    <string name="our_speaker">Our Speakers</string>
    <string name="pdf">Pdf</string>
    <string name="hotel_stay">Hotel &amp; stay</string>
    <string name="travel_schedule">TRAVEL DETAILS</string>
    <string name="travel_details">TRAVEL DETAILS:</string>
    <string name="arrival_Info">ARRIVAL INFORMATION:</string>
    <string name="departure_info">DEPARTURE INFORMATION:</string>
    <string name="hotel_info">HOTEL DETAILS:</string>
    <string name="travel_itinary">TRAVEL ITINERARY:</string>
    <string name="note">Notes</string>
    <string name="speaker_presentation">SPEAKERS PRESENTATION</string>
    <string name="dinner_time">Dinner Time</string>
    <string name="antalya_tour">3-D Antalya Tour</string>
    <string name="shuttle_bus">Shuttle Bus</string>
    <string name="seat_no">Seat No</string>
    <string name="seating_planing">SEATING PLAN</string>
    <string name="sc_team">SC TEAM</string>
    <string name="must_know">MUST KNOW</string>
    <string name="your_seat_no">Your Seat No</string>
    <string name="description">Thank You for Joining us in MSVC\'25 | Thank You for Joining us in MSVC\'25 | Thank You for Joining us in MSVC\'25</string>
    <string name="seating_plan">SEATING PLAN</string>
    <string name="hotel_description">Since 1982, Sheraton Grand Doha has been a pioneer.</string>
    <string name="hotel_description1">Al Corniche Street, P.O. Box 6000, Doha, Qatar</string>
    <string name="hotel_description2">Since 1982, Sheraton Grand Doha has been a pioneer, offering guests unprecedented access to exceptional service in Qatar. An iconic landmark for over three decades in Doha.</string>
    <string name="lamp_lighting">Lamp Lighting</string>
    <string name="localization">Localization</string>
    <string name="notes_section">Notes Section</string>
    <string name="stage_is_set">The Stage is Set</string>
    <string name="camera">Camera</string>
    <string name="home">Home</string>
    <string name="dress_code">DRESS CODE</string>
    <string name="dress_code1">Smart casuals</string>
    <string name="find_my_photo">Find My Photo</string>
    <string name="my_photo">My Photos</string>
    <string name="my_notes">MY NOTES</string>
    <string name="gala_dinner">Gala Dinner</string>
    <string name="capturing_moment">Capturing Moments</string>
    <string name="fun_time">Fun Time Start Now</string>
    <string name="travel_stay">Travel &amp; Stay</string>
    <string name="event_location">EVENT LOCATION</string>
    <string name="termandcondition">Accept Terms &amp; Conditions</string>
    <string name="question_slip">QUESTION SLIP</string>
    <string name="digital_exhibition">DIGITAL EXHIBITION</string>
    <string name="digital_exhibition_feedbck">Digital Exhibition Feedback</string>
    <string name="notification_home">NOTIFICATION</string>
    <string name="interaction">INTERACTION</string>
    <string name="no_data">No Data Found</string>
    <string name="conference_detail">Conference Details</string>
    <string name="join_us_for_the_lighting">Join Us For The Auspicious Lamp Lighting</string>
    <string name="expression_of_interest_for_localization">Expression of Interest for Localization</string>
    <string name="msvc_camera_corner">Msvc Camera Corner</string>
    <string name="hotel_acc">Hotel Accomodation</string>
    <string name="entertainment">Entertainment</string>
    <string name="emergency_contact">EMERGENCY CONTACT</string>
    <string name="submit">Submit</string>
    <string name="about_doha">ABOUT DOHA</string>
    <string name="verify">Verify</string>
    <string name="title">Title</string>
    <string name="enetr_username">Enter Username</string>
    <string name="enter_phone_no">Enter Mobile No</string>
    <string name="notify_value"></string>
    <string name="emergency">Emergency</string>
    <string name="police">Police</string>
    <string name="sample_text">Sample Text</string>
    <string name="speaker_name">Pankaj kumar</string>
    <string name="fire">Fire</string>
    <string name="message">Dear Delegate,\nOn behalf of Maruti Suzuki, I welcome&amp;#8230</string>
    <string name="time">2 days ago</string>
    <string name="time1">3h 30min</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_comment">add comment</string>
    <string name="indian_embassy">Indian Embassy</string>
    <string name="msil_engagement">MSIL ENGAGEMENT</string>
    <string name="engagement">Engagement</string>
    <string name="response_feedback">WE VALUE YOUR FEEDBACK</string>
    <string name="msil_contact">MSIL CONTACT</string>
    <string name="Food_beverages">Food &amp; Beverages</string>
    <string name="overall_quality_conference">Overall Experience</string>
    <string name="suggestion_for_improvement">Suggestions for improvement</string>

</resources>