<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimg">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Background Image (Placed Last So It Doesn't Overlap Other Views) -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/feedback_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/overlay"/>
        <!-- Back Button -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/thirty_five_dp"
            android:layout_height="@dimen/thirty_five_dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- Centered Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/response_feedback"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/firstll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/hotel_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_acc"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <io.github.dmitrytsyvtsyn.nicestarrating.NiceStarRatingView
                    android:id="@+id/ratingBarHotelAcco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:horizontalMargin="5dp"
                    app:starWidth="20dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/white"
                    app:color="@color/white"
                    app:halfOpportunity="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/hotel_acc"
                    app:layout_constraintTop_toTopOf="@+id/hotel_acc" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/hotelInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dp"
                android:inputType="textMultiLine"
                android:textSize="15sp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:hint="@string/add_comment"
                android:background="@drawable/feedback_drawable"
                app:layout_constraintStart_toStartOf="@+id/firstll"
                app:layout_constraintEnd_toEndOf="@+id/firstll"
                app:layout_constraintTop_toBottomOf="@+id/firstll"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/secondll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotelInput">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/entertainment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/roboto"
                    android:text="@string/entertainment"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <io.github.dmitrytsyvtsyn.nicestarrating.NiceStarRatingView
                    android:id="@+id/ratingBarEntertainment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:horizontalMargin="5dp"
                    app:starWidth="20dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/white"
                    app:color="@color/white"
                    app:halfOpportunity="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/entertainment"
                    app:layout_constraintBottom_toBottomOf="@+id/entertainment" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/entertainmentlInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dp"
                android:inputType="textMultiLine"
                android:textSize="15sp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:hint="@string/add_comment"
                app:layout_constraintStart_toStartOf="@+id/secondll"
                app:layout_constraintEnd_toEndOf="@+id/secondll"
                app:layout_constraintTop_toBottomOf="@+id/secondll"
                android:background="@drawable/feedback_drawable"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/thirdll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/entertainmentlInput">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/engagement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/engagement"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <io.github.dmitrytsyvtsyn.nicestarrating.NiceStarRatingView
                    android:id="@+id/ratingBarEngagement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:horizontalMargin="5dp"
                    app:starWidth="20dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/white"
                    app:color="@color/white"
                    app:halfOpportunity="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/engagement"
                    app:layout_constraintBottom_toBottomOf="@+id/engagement"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/engagementlInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dp"
                android:inputType="textMultiLine"
                android:textSize="15sp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:hint="@string/add_comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/feedback_drawable"
                app:layout_constraintTop_toBottomOf="@+id/thirdll"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fourthll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/engagementlInput">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/foodBeverages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Food_beverages"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <io.github.dmitrytsyvtsyn.nicestarrating.NiceStarRatingView
                    android:id="@+id/ratingBarFoodBeverges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:horizontalMargin="5dp"
                    app:starWidth="20dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/white"
                    app:color="@color/white"
                    app:halfOpportunity="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/foodBeverages"
                    app:layout_constraintBottom_toBottomOf="@+id/foodBeverages"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/foodInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dp"
                android:inputType="textMultiLine"
                android:textSize="15sp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:hint="@string/add_comment"
                app:layout_constraintStart_toStartOf="@id/fourthll"
                app:layout_constraintEnd_toEndOf="@id/fourthll"
                app:layout_constraintTop_toBottomOf="@+id/fourthll"
                android:background="@drawable/feedback_drawable"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fifthll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodInput">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/overallExperience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/overall_quality_conference"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <io.github.dmitrytsyvtsyn.nicestarrating.NiceStarRatingView
                    android:id="@+id/ratingBarOverallExperience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:horizontalMargin="5dp"
                    app:starWidth="20dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/white"
                    app:color="@color/white"
                    app:halfOpportunity="true"
                    app:layout_constraintTop_toTopOf="@+id/overallExperience"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/overallExperience"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/overalllInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten_dp"
                android:inputType="textMultiLine"
                android:textSize="15sp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:hint="@string/add_comment"
                app:layout_constraintStart_toStartOf="@+id/fifthll"
                app:layout_constraintEnd_toEndOf="@+id/fifthll"
                app:layout_constraintTop_toBottomOf="@+id/fifthll"
                android:background="@drawable/feedback_drawable"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/suggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/feed_color"
                android:textSize="15sp"
                android:inputType="textMultiLine"
                android:hint="@string/suggestion_for_improvement"
                android:paddingVertical="15dp"
                app:cornerRadius="10dp"
                android:paddingStart="10dp"
                android:fontFamily="@font/roboto"
                android:textAllCaps="false"
                android:background="@drawable/edittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overalllInput"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingVertical="15dp"
                app:cornerRadius="10dp"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto"
                android:backgroundTint="@color/bottomBar_color"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@+id/suggestion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>